[package]
name = "nomenclate"
version = "0.1.0"
edition = "2021"
authors = ["milan <milan@milan.wtf>"]
description = "A tool to automatically rename document files according to their title."
license = "MIT"

[dependencies]
log = "0.4.25"
lopdf = "0.35.0"
pretty_env_logger = "0.5.0"
thiserror = "2.0.11"
